--- a/style.css
+++ b/style.css
@@ -9,6 +9,36 @@ body {
     line-height: 1;
     margin: 0;
 }
+.container {
+    width: 100%;
+    margin: 0;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.row::after {
+    display: table;
+    clear: both;
+    content: "";
+}
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 
 
 nav {
@@ -51,6 +81,40 @@ ul.topnav li.dropdownIcon {
     display: none;
 
 }
+
+/*############ Custom styles###########*/
+
+#section-1-gradient {
+  background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+}
+
+.leftSide-col {
+    margin-left: 20%;
+}
+
+div.rightSide-col {
+    margin-left: 15%;
+}
+
+
+h1.large {
+    color: #fff;
+    font-size: 56px;
+    margin: 0;
+    line-height: 70px;
+}
+
+form h2 {
+    color: white;
+}
+
+input[type="text"] {
+    font-size: 20px;
+    width: 400px;
+    min-width: 100px;
+    padding: 6px;
+}
+
 
 /*################# Mobile #####################*/
 
