--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ p {
     font-size: 28px;
     line-height: 1.2;
 }
+
+article p {
+    font-size: 25px;
+    padding: 20px;
+
+}
 .container {
     width: 100%;
     margin: 0;
@@ -94,27 +100,7 @@ ul.topnav li.dropdownIcon {
     display: none;
 
 }
-/*
 
- .secondheaderPart h1 { 
-  text-align: center;
-}
- .square {
-  height: 250px;
-  width: 250px;
-  background-color: transparent;
-  margin: auto;
-  padding: 20px;
-    border-radius: 15px;
-
- 
-  }
-
- .row h2 p{
-    text-align: center;
-    margin: 50px;
-}
-*/
 /*############ Custom styles###########*/
 
 #section-1-gradient {
@@ -128,6 +114,12 @@ div.box {
     background-color: white;
     box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px 0 rgba(0,0,0.1);
     
+}
+
+div.secondIcon img {
+    display: block;
+    margin: auto;
+    box-shadow: -2px -2px 20px 2px rgba(0,0,0,.15), 2px 2px 17px 2px rgba(0,0,0,1);
 }
 
 button {
@@ -149,8 +141,6 @@ button.LearnMore {
 
 .icon {
     width: 100%;
-    max-height: 125px;
-    max-width: 125px;
 }
 
 div.leftSide-col {
@@ -186,6 +176,29 @@ input[type="text"] {
     border-radius: 7px;
 }
 
+footer.footsy {
+    background-color: #666;
+    padding-left: 10%;
+}
+
+
+footer.footsy h1 {
+    color: white;
+    font-size: 35px;
+}
+
+
+footer.footsy ul {
+    list-style: none;
+    text-align: left;
+    padding-left: 0;
+}
+
+footer.footsy ul li {
+    color: white;
+    font-size: 22px;
+    line-height: 1.5;
+}
 
 
 /*################# Mobile #####################*/
@@ -223,16 +236,38 @@ input[type="text"] {
     h1.section2Header {
         font-size: 50px;
     }
+    article p {
+        font-size: 25px;
 
- .col-6, .col-4 {
+    
+    }
+
+ .col-7, .col-6, .col-5, .col-4 {
     width: 100%;
      margin: 0;
+     
     }
+
     
+    div.mobile2 {
+        width: 50%;
+        display: block;
+        {
+    
+
     div.box {
         padding: 5px;
         display: block;
 }
+    
+    div.secondIcon {
+        margin: 10px;
+    }
+    
+    div.secondIcon img {
+        width: 100%;
+    
+    }
    
    div.leftSide-col, div.rightSide-col {
              margin: 15px;
